Fixing original header markup - adding header wrap

--- a/css/main_orig.css
+++ b/css/main_orig.css
@@ -158,6 +158,19 @@ p {
   color: #000000;
 }
 
+.header__wrap {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 456px) {
+  .header__wrap {
+    display: none;
+  }
+}
+
 .header__list {
   display: flex;
   padding: 0px;
