--- a/saas/components/_header.scss
+++ b/saas/components/_header.scss
@@ -37,6 +37,19 @@
   }
 }
 
+.header__wrap {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 456px) {
+  .header__wrap {
+    display: none;
+  }
+}
+
 .header__list {
   @extend %list;
   display: flex;
